--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,7 +11,7 @@ a{
 .main{
     width: 100%;
     height: 100vh;
-    background-color: white;
+    background-color: rgb(244, 252, 252);
     position: relative;
     background-image:url(../Images/book.jpg);
     background-repeat: no-repeat;
@@ -27,8 +27,10 @@ nav{
     letter-spacing: 2px;
     position: fixed;
     top: 0;
+    background-color: rgb(236, 249, 246);
     left: 0;
-    width: 100;
+    width: 100%;
+    height: 60px;
     box-sizing: border-box;
     padding: 10px 50px;
     box-shadow: 2px 2px 12 px rgba(0, 0, 0, 0.5);
@@ -40,12 +42,22 @@ nav{
 .menu li a{
     padding: 10px 15px;
     color:rgb(219, 167, 38);
-    font-size: 13px;
+    font-size: 16px;
 
 }
 .sitename{
     font-size: 25px;
     font-weight: bold;
     color:deeppink;
+    margin-left: 50px;
     
+}
+.logo{font-size: 25px;
+font-weight: bold;
+color: rgb(165, 159, 145);
+}
+.menu li a:hover{
+    background-color: #29292929;
+    font-weight: 700;
+    transition: all ease 0.4s;
 }
