--- a/CSS/index.css
+++ b/CSS/index.css
@@ -61,3 +61,11 @@ color: rgb(165, 159, 145);
     font-weight: 700;
     transition: all ease 0.7s;
 }
+.ideal{
+    width: 650px;
+    position: absolute;
+    top: 335;
+    left: 10%;
+    transition: translate(-10%, -33%);
+    line-height: 60px;
+}
