--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,7 +11,7 @@ a{
 .main{
     width: 100%;
     height: 100vh;
-    background-color: rgb(244, 252, 252);
+    background-color: rgb(255, 255, 255);
     position: relative;
     background-image:url(../Images/book.jpg);
     background-repeat: no-repeat;
@@ -64,8 +64,20 @@ color: rgb(165, 159, 145);
 .ideal{
     width: 650px;
     position: absolute;
-    top: 335;
+    top: 33%;
     left: 10%;
     transition: translate(-10%, -33%);
     line-height: 60px;
+}
+.detail{
+    line-height: 30px !important;
+}
+.ideal h1{
+    font-size: 60px;
+    margin: 0;
+    letter-spacing: 3px;
+    color: cadetblue;
+}
+ .ideal span{
+    color: rgb(227, 153, 3);
 }
