--- a/CSS/index.css
+++ b/CSS/index.css
@@ -27,7 +27,7 @@ nav{
     letter-spacing: 2px;
     position: fixed;
     top: 0;
-    background-color: rgb(236, 249, 246);
+    background-color: rgb(233, 238, 237);
     left: 0;
     width: 100%;
     height: 60px;
@@ -55,8 +55,10 @@ font-weight: bold;
 color: rgb(165, 159, 145);
 }
 .menu li a:hover{
-    background-color: #6ad8dcd5;
+    background-color: #aeeaec;
     font-weight: 700;
+    border-radius: 8px;
+    border: solid 1px rgb(252, 149, 201);
     transition: all ease 0.7s;
 }
 .ideal{
@@ -71,7 +73,7 @@ color: rgb(165, 159, 145);
     line-height: 30px !important;
 }
 .ideal h1{
-    font-size: 60px;
+    font-size: 40px;
     margin: 0;
     letter-spacing: 3px;
     color: rgb(68, 112, 114);
@@ -90,5 +92,8 @@ color: rgb(165, 159, 145);
     border-radius: 4px;
     font-size: 20px;
     border:none;
-    border: solid 3px goldenrod;
+    border: solid 2px goldenrod;
+}
+.downlaod:hover{
+    background-color: rgb(96, 137, 151);
 }
