--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,9 +11,9 @@ a{
 .main{
     width: 100%;
     height: 100vh;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(96, 195, 168);
     position: relative;
-    background-image:url(../Images/book.jpg);
+    background-image:url(../Images/online.png);
     background-repeat: no-repeat;
     background-size: 600px;
     background-position: right bottom;
@@ -44,18 +44,20 @@ nav{
     color:rgb(219, 167, 38);
     font-size: 16px;
 }
-.sitename{
+
+.logo:hover{
+    background-color: rgb(213, 235, 227);
+    transition: all ease 0.7s;
+}
+.logo{
     font-size: 25px;
     font-weight: bold;
-    color:rgb(247, 119, 187);
-    margin-left: 50px;
-}
-.logo{font-size: 25px;
-font-weight: bold;
-color: rgb(165, 159, 145);
+    color:indigo;
+    margin-left: 20px;
+    font-style: italic;
 }
 .menu li a:hover{
-    background-color: #aeeaec;
+    background-color: #c6dbdd;
     font-weight: 700;
     border-radius: 8px;
     border: solid 1px rgb(252, 149, 201);
@@ -64,7 +66,7 @@ color: rgb(165, 159, 145);
 .ideal{
     width: 650px;
     position: absolute;
-    top: 29%;
+    top: 40%;
     left: 10%;
     transition: translate(-10%, -33%);
     line-height: 60px;
