--- a/CSS/index.css
+++ b/CSS/index.css
@@ -10,13 +10,13 @@ a{
 }
 .main{
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     background-color: rgb(96, 195, 168);
     position: relative;
     background-image:url(../Images/online.png);
     background-repeat: no-repeat;
     background-size: 600px;
-    background-position: right bottom;
+    background-position: right center;
 }
 nav{
     display: flex;
@@ -27,13 +27,13 @@ nav{
     letter-spacing: 2px;
     position: fixed;
     top: 0;
-    background-color: rgb(233, 238, 237);
+    background-color: rgb(199, 222, 217);
     left: 0;
     width: 100%;
     height: 50px;
     box-sizing: border-box;
     padding: 10px 50px;
-    box-shadow: 2px 2px 12 px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
 .menu{
@@ -58,15 +58,16 @@ nav{
 }
 .menu li a:hover{
     background-color: #c6dbdd;
-    font-weight: 700;
+    font-weight: 500;
     border-radius: 8px;
+    padding: 2px;
     border: solid 1px rgb(252, 149, 201);
     transition: all ease 0.7s;
 }
 .ideal{
     width: 650px;
     position: absolute;
-    top: 40%;
+    top: 33%;
     left: 10%;
     transition: translate(-10%, -33%);
     line-height: 60px;
@@ -92,7 +93,7 @@ nav{
     background-color:rgb(216, 94, 94);
     color:beige;
     border-radius: 4px;
-    font-size: 20px;
+    font-size: 25px;
     border:none;
     border: solid 2px goldenrod;
 }
