--- a/CSS/index.css
+++ b/CSS/index.css
@@ -27,13 +27,13 @@ nav{
     letter-spacing: 2px;
     position: fixed;
     top: 0;
-    background-color: rgb(199, 222, 217);
+    background-color: rgb(183, 235, 224);
     left: 0;
     width: 100%;
     height: 50px;
     box-sizing: border-box;
     padding: 10px 50px;
-    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 10px rgba(4, 95, 95, 0.897);
     z-index: 1;
 }
 .menu{
@@ -41,8 +41,8 @@ nav{
 }
 .menu li a{
     padding: 10px 15px;
-    color:rgb(219, 167, 38);
-    font-size: 16px;
+    color:rgb(184, 137, 17);
+    font-size: 19px;
 }
 
 .logo:hover{
@@ -57,7 +57,7 @@ nav{
     font-style: italic;
 }
 .menu li a:hover{
-    background-color: #196e63;
+    background-color: #48c2b1;
     font-weight: 700;
     border-radius: 10px;
     border: solid 1px rgb(191, 202, 76);
@@ -91,13 +91,13 @@ nav{
     align-items: center;
     background-color:rgb(216, 94, 94);
     color:beige;
-    border-radius: 4px;
+    border-radius: 6px;
     font-size: 25px;
     border:none;
     border: solid 2px goldenrod;
 }
 .downlaod:hover{
-    background-color: rgb(144, 171, 180);
+    background-color: rgb(88, 104, 110);
     transition: all ease 0.4s;
 }
 .heading{
