--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,13 +1,9 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-ul{
-    list-style: none;
-}
-a{
-    text-decoration: none;
-}
+*{ margin: 0;
+    padding: 0;}
+
+ul{list-style: none;}
+
+a{ text-decoration: none;}
 .main{
     width: 100%;
     height: 90vh;
@@ -27,7 +23,7 @@ nav{
     letter-spacing: 2px;
     position: fixed;
     top: 0;
-    background-color: rgb(183, 235, 224);
+    background-color: rgb(240, 247, 244);
     left: 0;
     width: 100%;
     height: 50px;
@@ -41,13 +37,8 @@ nav{
 }
 .menu li a{
     padding: 10px 15px;
-    color:rgb(184, 137, 17);
     font-size: 17px;
-}
-
-.logo:hover{
-    background-color: rgb(213, 235, 227);
-    transition: all ease 0.7s;
+    color:rgb(184, 137, 17);
 }
 .logo{
     font-size: 25px;
@@ -57,10 +48,10 @@ nav{
     font-style: italic;
 }
 .menu li a:hover{
-    background-color: #55d0bf;
+    background-color: #def0ed;
     font-weight: 700;
     border-radius: 10px;
-    border: solid 1px rgb(191, 202, 76);
+    border: solid 1px rgb(211, 224, 65);
     transition: all ease 0.4s;
 }
 .ideal{
@@ -108,6 +99,9 @@ nav{
     font-style: oblique;
     color: rgb(156, 109, 190);
 }
+.heading:hover{
+    color: palevioletred;
+}
 .heading span{
     background-color: rgb(250, 166, 56);
     color: rgb(255, 255, 255);
@@ -120,10 +114,14 @@ nav{
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 20px;
+    width: 100%;
+    background-color:rgb(243, 243, 243);
+    padding-bottom: 50px;
 }
 .container{
     height: 370px;
     width: 270px;
+    background-color: #ecf3f2;
     border:2px solid rgb(103, 172, 160);
 }
 .container:hover{
@@ -148,14 +146,21 @@ nav{
 }
 .dropdown-checkbox {
     display: none;
-    
 }
 .dropbtn {
     padding: 10px 15px;
     color:rgb(184, 137, 17);
     font-size: 17px;
     cursor:pointer;
+    font-size: 19px;
     border-radius: 8px;
+}
+.dropbtn:hover{
+    background-color: #def0ed;
+    font-weight: 700;
+    border-radius: 10px;
+    border: solid 1px rgb(191, 202, 76);
+    transition: all ease 0.4s;
 }
 .dropdown-content {
     display: none;
@@ -176,7 +181,8 @@ nav{
     border-radius: 5px;
 }
 .dropdown-content a:hover {
-    background-color: #51bc9c;
+    background-color: #a6e4d1;
+    box-shadow: 0px 1px 10px 1px rgba(74, 79, 79, 0.916);
 }
 .dropdown-checkbox:checked ~ .dropdown-content {
     display: block;
@@ -190,3 +196,27 @@ nav{
     display: inline-block;
     transition: transform 0.3s
 }
+.offer{
+    background-color:#2a2145;
+    height: 450px;
+    width: 100%;
+    background-image:url(./../Images/3D.avif);
+    background-repeat: no-repeat;
+    background-size: 650px;
+    background-position: left center;
+    position:absolute;
+    border: 1px solid rgb(201, 200, 200);
+    backface-visibility: hidden;
+}
+.sell img{
+    height: 80px;
+    width: 60px;
+    padding-bottom: 20px;
+}
+.sell{
+text-align: right ;
+color: rgb(238, 219, 219);
+padding-right: 200px;
+padding-top: 50px;
+}
+
