final chnages in homepage

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -205,8 +205,9 @@ nav{
     background-size: 650px;
     background-position: left center;
     position:absolute;
-    border: 1px solid rgb(201, 200, 200);
+    border: 2px dotted rgb(114, 137, 132);
     backface-visibility: hidden;
+
 }
 .sell img{
     height: 80px;
@@ -218,5 +219,14 @@ text-align: right ;
 color: rgb(238, 219, 219);
 padding-right: 200px;
 padding-top: 50px;
+} 
+.sell  button{
+    background-color: rgb(252, 150, 18); 
+    width: 150px; 
+    height: 40px;
+    border:1px solid black;
+    color: rgb(119, 50, 136);
+    font-size: 18px;
+    border-radius:  9px 0 9px 0;
 }
 
