--- a/CSS/index.css
+++ b/CSS/index.css
@@ -228,5 +228,8 @@ padding-top: 50px;
     color: rgb(119, 50, 136);
     font-size: 18px;
     border-radius:  9px 0 9px 0;
+    margin-top: 5px;
 }
-
+.sell button:hover{
+    background-color: pink;
+}
