--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,20 +1,21 @@
-*{ margin: 0;
+* {
+    margin: 0;
     padding: 0;}
-
-ul{list-style: none;}
-
-a{ text-decoration: none;}
-.main{
+ul {
+    list-style: none;}
+a {
+    text-decoration: none;}
+.main {
     width: 100%;
     height: 90vh;
     background-color: rgb(96, 195, 168);
     position: relative;
-    background-image:url(../Images/online.png);
+    background-image: url(../Images/online.png);
     background-repeat: no-repeat;
     background-size: 1000px;
     background-position: right bottom;
 }
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,116 +31,113 @@ nav{
     box-sizing: border-box;
     padding: 10px 50px;
     box-shadow: 2px 2px 10px rgba(4, 95, 95, 0.897);
-    z-index: 1;
-}
-.menu{
-    display: flex;
-}
-.menu li a{
+    z-index: 1;}
+.menu {
+    display: flex;}
+.menu li a {
     padding: 10px 15px;
     font-size: 17px;
-    color:rgb(184, 137, 17);
-}
-.logo{
+    color: rgb(184, 137, 17);}
+.logo {
     font-size: 25px;
     font-weight: bold;
-    color:indigo;
+    color: indigo;
     margin-left: 20px;
-    font-style: italic;
-}
-.menu li a:hover{
+    font-style: italic;}
+.menu li a:hover {
     background-color: #def0ed;
     font-weight: 700;
     border-radius: 10px;
     border: solid 1px rgb(211, 224, 65);
     transition: all ease 0.4s;
 }
-.ideal{
+.ideal {
     width: 650px;
     position: absolute;
     top: 33%;
     left: 10%;
-    transition: translate(-10%, -33%);
+    transform: translate(-10%, -33%);
     line-height: 60px;
 }
-.detail{
+.detail {
     line-height: 30px !important;
 }
-.ideal h1{
+.ideal h1 {
     font-size: 40px;
     margin: 0;
     letter-spacing: 3px;
     color: rgb(68, 112, 114);
 }
- .ideal span{
+.ideal span {
     color: rgb(197, 139, 23);
 }
-.downlaod{
+.downlaod {
     width: 200px;
     height: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:rgb(216, 94, 94);
-    color:beige;
+    background-color: rgb(216, 94, 94);
+    color: beige;
     border-radius: 6px;
     font-size: 25px;
-    border:none;
+    border: none;
     border: solid 2px goldenrod;
 }
-.downlaod:hover{
+.downlaod:hover {
     background-color: rgb(88, 104, 110);
     transition: all ease 0.4s;
 }
-.heading{
+.heading {
     text-align: center;
-    padding-top: 30px ;
+    padding-top: 30px;
     padding-bottom: 30px;
     font-size: 30px;
     font-style: oblique;
     color: rgb(156, 109, 190);
 }
-.heading:hover{
+.heading:hover {
     color: palevioletred;
 }
-.heading span{
+.heading span {
     background-color: rgb(250, 166, 56);
     color: rgb(255, 255, 255);
     display: inline-block;
-    padding:8px;
-    border-radius: 4px
+    padding: 8px;
+    border-radius: 4px;
 }
-.feature{
+.feature {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 20px;
     width: 100%;
-    background-color:rgb(243, 243, 243);
+    background-color: rgb(243, 243, 243);
     padding-bottom: 50px;
 }
-.container{
+.container {
     height: 370px;
     width: 270px;
     background-color: #ecf3f2;
-    border:2px solid rgb(103, 172, 160);
+    border: 2px solid rgb(103, 172, 160);
+    margin: 10px;
 }
-.container:hover{
-    box-shadow:0 0 7px 4px rgb(173, 193, 198);
+.container:hover {
+    box-shadow: 0 0 7px 4px rgb(173, 193, 198);
 }
-.feature-img{
+.feature-img {
     height: 110px;
     width: 120px;
     padding-left: 70px;
     padding-top: 20px;
 }
-.container h1{
+.container h1 {
     padding-top: 7px;
     color: rgb(156, 89, 203);
     text-align: center;
 }
-.container p{
-    text-align:center;
+.container p {
+    text-align: center;
     padding: 25px;
     font-size: 17px;
     color: rgb(132, 124, 12);
@@ -149,13 +147,12 @@ nav{
 }
 .dropbtn {
     padding: 10px 15px;
-    color:rgb(184, 137, 17);
+    color: rgb(184, 137, 17);
     font-size: 17px;
-    cursor:pointer;
-    font-size: 19px;
+    cursor: pointer;
     border-radius: 8px;
 }
-.dropbtn:hover{
+.dropbtn:hover {
     background-color: #def0ed;
     font-weight: 700;
     border-radius: 10px;
@@ -164,7 +161,7 @@ nav{
 }
 .dropdown-content {
     display: none;
-    position:fixed;
+    position: fixed;
     background-color: #cceae5;
     box-shadow: 0px 8px 16px 3px rgba(74, 79, 79, 0.916);
     z-index: 1;
@@ -172,12 +169,12 @@ nav{
     width: 220px;
 }
 .dropdown-checkbox:checked + .dropbtn .arrow {
-    transform: rotate(180deg); 
+    transform: rotate(180deg);
 }
 .dropdown-content a {
     color: rgb(0, 0, 0);
     padding: 10px 15px;
-    display:list-item;
+    display: list-item;
     border-radius: 5px;
 }
 .dropdown-content a:hover {
@@ -192,44 +189,289 @@ nav{
     display: inline-block;
 }
 .arrow {
-    margin-left:2px;
+    margin-left: 2px;
     display: inline-block;
-    transition: transform 0.3s
+    transition: transform 0.3s;
 }
-.offer{
-    background-color:#2a2145;
+.offer {
+    background-color: #2a2145;
     height: 450px;
     width: 100%;
-    background-image:url(./../Images/3D.avif);
+    background-image: url(./../Images/3D.avif);
     background-repeat: no-repeat;
     background-size: 650px;
     background-position: left center;
-    position:absolute;
+    position: relative;
     border: 2px dotted rgb(114, 137, 132);
     backface-visibility: hidden;
-
 }
-.sell img{
+.sell img {
     height: 80px;
     width: 60px;
     padding-bottom: 20px;
 }
-.sell{
-text-align: right ;
-color: rgb(238, 219, 219);
-padding-right: 200px;
-padding-top: 50px;
-} 
-.sell  button{
-    background-color: rgb(252, 150, 18); 
-    width: 150px; 
+.sell {
+    text-align: right;
+    color: rgb(238, 219, 219);
+    padding-right: 200px;
+    padding-top: 50px;
+}
+.sell button {
+    background-color: rgb(252, 150, 18);
+    width: 150px;
     height: 40px;
-    border:1px solid black;
+    border: 1px solid black;
     color: rgb(119, 50, 136);
     font-size: 18px;
-    border-radius:  9px 0 9px 0;
+    border-radius: 9px 0 9px 0;
     margin-top: 5px;
 }
-.sell button:hover{
+.sell button:hover {
     background-color: pink;
+}
+
+/* Small Devices (Portrait Phones, less than 576px) */
+@media (max-width: 575.98px) {
+    nav {
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
+    }
+
+    .menu {
+        flex-direction: column;
+        align-items: center;
+    }
+    .menu li a {
+        padding: 10px 0;
+        font-size: 10px;
+    }
+
+    .logo {
+        font-size: 20px;
+        margin-left: 0;
+    }
+
+    .ideal {
+        width: 90%;
+        top: 20%;
+        left: 5%;
+        line-height: 40px;
+        text-align: center;
+    }
+
+    .ideal h1 {
+        font-size: 24px;
+    }
+
+    .detail {
+        font-size: 18px;
+    }
+
+    .downlaod {
+        width: 150px;
+        height: 35px;
+        font-size: 18px;
+    }
+
+    .heading {
+        font-size: 24px;
+        padding: 20px;
+    }
+
+    .feature {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container {
+        width: 90%;
+        margin: 10px 0;
+    }
+
+    .offer {
+        padding-right: 20px;
+        padding-top: 20px;
+    }
+
+    .sell {
+        padding-right: 20px;
+    }
+
+    .sell button {
+        width: 120px;
+        height: 35px;
+        font-size: 16px;
+    }
+    .main {
+        background-image: none;
+    }
+
+    .offer {
+        background-image: none;
+    }
+}
+
+/* Medium Devices (Tablets, less than 768px) */
+@media (max-width: 767.98px) {
+    nav {
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
+    }
+
+    .menu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu li a {
+        padding: 10px 0;
+        font-size: 16px;
+    }
+
+    .logo {
+        font-size: 22px;
+        margin-left: 0;
+    }
+
+    .ideal {
+        width: 80%;
+        top: 20%;
+        left: 10%;
+        line-height: 40px;
+        text-align: center;
+    }
+
+    .ideal h1 {
+        font-size: 28px;
+    }
+
+    .detail {
+        font-size: 20px;
+    }
+    .downlaod {
+        width: 160px;
+        height: 38px;
+        font-size: 20px;
+    }
+    .heading {
+        font-size: 26px;
+        padding: 25px;
+    }
+    .feature {
+        flex-direction: column;
+        align-items: center;
+    }
+    .container {
+        width:280px;
+        height: 350px;
+        margin: 10px 0;
+    }
+    .offer {
+        padding-right: 10px;
+        padding-top: 20px;
+        font-size: 14px;
+        background-image: none;
+        background-color: rgb(131, 65, 198);
+    }
+    .sell {
+        padding-left: 40px;
+        text-align: left;
+    }
+    .sell button {
+        width: 130px;
+        height: 38px;
+        font-size: 18px;
+    }
+    .main {
+        background-image: none;
+    }
+}
+
+/* Large Devices (Desktops, greater than 992px) */
+@media (min-width: 992px) {
+    .ideal {
+        width: 650px;
+        top: 33%;
+        left: 10%;
+        line-height: 60px;
+    }
+
+    .ideal h1 {
+        font-size: 40px;
+    }
+
+    .detail {
+        font-size: 35px;
+    }
+
+    .downlaod {
+        width: 200px;
+        height: 45px;
+        font-size: 25px;
+    }
+
+    .heading {
+        font-size: 30px;
+        padding: 30px;
+    }
+
+    .feature {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .container {
+        width: 270px;
+        margin: 10px;
+    }
+    .sell {
+        padding-right: 200px;
+    }
+    .sell button {
+        width: 150px;
+        height: 40px;
+        font-size: 18px;
+    }
+}
+/* Extra Large Devices (Large Desktops, greater than 1200px) */
+@media (min-width: 1200px) {
+    .ideal {
+        width: 650px;
+        top: 33%;
+        left: 10%;
+        line-height: 60px;
+    }
+    .ideal h1 {
+        font-size: 40px;
+    }
+    .detail {
+        font-size: 35px;
+    }
+    .downlaod {
+        width: 200px;
+        height: 45px;
+        font-size: 25px;
+    }
+    .heading {
+        font-size: 30px;
+        padding: 30px;
+    }
+    .feature {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .container {
+        width: 270px;
+        margin: 10px;
+    }
+    .sell {
+        padding-right: 200px;
+    }
+    .sell button {
+        width: 150px;
+        height: 40px;
+        font-size: 18px;
+    }
 }
