--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
-    padding: 0;}
+    padding: 0;
+    position: relative;
+}
 ul {
     list-style: none;}
 a {
@@ -54,8 +56,8 @@ nav {
 .ideal {
     width: 650px;
     position: absolute;
-    top: 33%;
-    left: 10%;
+    padding-top:80px ; 
+    padding-left: 120px;
     transform: translate(-10%, -33%);
     line-height: 60px;
 }
@@ -245,8 +247,13 @@ nav {
         padding: 10px 0;
         font-size: 10px;
     }
-    .menu li a:hover{
-        background-color: whitesmoke;
+    .menu li a:hover{ 
+        background-color: #def0ed;
+        border: none;
+    }
+    .dropbtn:hover{
+        border: none;
+
     }
     .logo {
         font-size: 20px;
@@ -260,17 +267,22 @@ nav {
         text-align: center;
     }
     .ideal h1 {
-        font-size: 24px;
+        font-size: 10px;
     }
-    .detail {
-        font-size: 18px;
+    .ideal h2{
+        font-size: 15px;
+    }
+    .ideal .detail{
+        font-size: 10px;
     }
     .ideal .downlaod {
-        width: 200px;
+        width: 150px;
         height: 35px;
-        font-size: 18px;
+        font-size: 19px;
+        margin-left: 45px;
     }
-    .heading {
+    .heading{
+        padding-left: 50px;
         font-size: 24px;
         padding: 20px;
     }
@@ -278,8 +290,24 @@ nav {
         flex-direction: column;
         align-items: center;
     }
-    .container {
-        width: 90%;
+    .container h1{
+        padding-top: 2px;
+        font-size: 15px;
+    }
+    .container p{
+        padding-top: 3px;
+        font-size: 12px;
+    }
+    .feature-img{
+        padding-top: 7px;
+        padding-left: 60px;
+        height: 65px;
+        width: 70px;
+    }
+    .feature .container {
+        height: 220px;
+        width: 40%;
+        border-radius: 8px;
         margin: 10px 0;
     }
     .offer {
@@ -288,6 +316,7 @@ nav {
     }
     .sell {
         padding-right: 20px;
+        padding-top: 30px;
     }
     .sell button {
         width: 120px;
@@ -419,7 +448,7 @@ nav {
         font-size: 18px;
     }
 }
-/* Extra Large Devices (Large Desktops, greater than 1200px) */
+/* Extra Large Devices (Large Desktops, greater than 1200px) 
 @media (min-width: 1200px) {
     .ideal {
         width: 650px;
@@ -459,3 +488,60 @@ nav {
         font-size: 18px;
     }
 }
+*/
+/*Footer Section*/
+ .footer{
+    margin-top: 150px;
+    width: 90%;
+    padding: 100px 15%;
+    background-color: #726f7a;
+    color: #a6e4d1;
+    display: flex;
+ }
+ .footer div{
+    text-align: center;
+    justify-content: space-around;
+ }
+ .second{
+   flex-grow:.3;
+ }
+ .footer div h3{
+    font-weight: 300;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
+ }
+  .first a{
+    display: block;
+    text-decoration: none;
+    color: antiquewhite;
+    margin-bottom: 10px;
+ }
+ form input{
+    width: 400px;
+    height: 45px;
+    border-radius: 7px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    outline: none;
+    border: none;
+ }
+ form button{
+    background: #cceae5;
+    border: 1px solid goldenrod;
+    color:#264412;
+    border-radius: 30px;
+    padding: 10px 30px;
+    font-size: 15px;
+    cursor: pointer;
+ }
+ .icon{
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+ }
+ .icon img{
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+ }
