change folder name, added three card of camera with css

--- a/CSS/camera.css
+++ b/CSS/camera.css
@@ -122,3 +122,100 @@ nav {
     display: inline-block;
     transition: transform 0.3s
 }
+.cart1 {
+    margin: 50px 30px 30px 60px;
+    height: 550px;
+    width: 350px;
+    background-color: aliceblue;
+    border-radius: 10px;
+    box-shadow: 1px 1px 20px 2px grey;
+    display: inline-block;
+}
+.cart2 {
+    margin: 50px 30px 30px 60px;
+    height: 550px;
+    width: 350px;
+    background-color: aliceblue;
+    border-radius: 10px;
+    box-shadow: 1px 1px 20px 2px grey;
+    display: inline-block;
+}
+.cart3 {
+    margin: 50px 30px 30px 60px;
+    height: 550px;
+    width: 350px;
+    background-color: aliceblue;
+    border-radius: 10px;
+    box-shadow: 1px 1px 20px 2px grey;
+    display: inline-block;
+}
+.Top-Recommended{
+    margin-top:110px;
+}
+header {
+    background-color: #f8f9fa;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+h1,
+h2,
+h3 {
+    margin: 0 0 20px;
+}
+
+.price {
+    margin-left: 15px;
+    font-size: 20px;
+}
+
+.c1-img {
+    margin-bottom: 5px;
+    height: 180px;
+    width: 350px;
+    border-radius: 10px 10px 0 0;
+}
+
+.c2-img {
+    margin-bottom: 5px;
+    height: 215px;
+    width: 350px;
+    border-radius: 10px 10px 0 0;
+}
+
+.c3-img {
+    margin-bottom: 5px;
+    height: 220px;
+    width: 350px;
+    border-radius: 10px 10px 0 0;
+}
+
+.c-name {
+    margin-left: 15px;
+    font-size: 17px;
+}
+
+.disc {
+    margin-top: 0;
+    margin-left: 15px;
+}
+
+.d-head {
+    color: rgba(57, 55, 55, 0.63);
+}
+
+.highlight {
+    margin-top: 8px;
+    margin-left: 20px;
+}
+
+.btn {
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    border: none;
+    padding: 10px;
+    margin-top: 50px;
+    margin-left: 140px;
+}
