--- a/CSS/index.css
+++ b/CSS/index.css
@@ -493,9 +493,10 @@ nav {
  .footer{
     margin-top: 150px;
     width: 90%;
+    font-size: 17px;
     padding: 100px 15%;
-    background-color: #726f7a;
-    color: #a6e4d1;
+    background-color: #38363f;
+    color: #e7f1ef;
     display: flex;
  }
  .footer div{
@@ -503,18 +504,23 @@ nav {
     justify-content: space-around;
  }
  .second{
-   flex-grow:.3;
+   flex-grow:.4;
  }
  .footer div h3{
     font-weight: 300;
     margin-bottom: 30px;
+    font-size: 20px;
     letter-spacing: 1px;
+ }
+ .footer h3{
+    color: rgb(255, 146, 67);
  }
   .first a{
     display: block;
     text-decoration: none;
     color: antiquewhite;
     margin-bottom: 10px;
+    font-size: 19px;
  }
  form input{
     width: 400px;
@@ -527,13 +533,17 @@ nav {
     border: none;
  }
  form button{
-    background: #cceae5;
+    background-color: #428579;
     border: 1px solid goldenrod;
     color:#264412;
+    color: #ecf3f2;
     border-radius: 30px;
     padding: 10px 30px;
     font-size: 15px;
     cursor: pointer;
+ }
+ form button:hover{
+    background-color:rgb(225, 149, 6) ;
  }
  .icon{
     display: flex;
@@ -545,3 +555,68 @@ nav {
     width: 30px;
     cursor: pointer;
  }
+ .icon img:hover:hover{
+    box-shadow:0 0 7px 4px rgb(167, 24, 160);
+ }
+ /*cards*/
+ .card-container{
+    padding-top: 60px;
+    padding-bottom: 60px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+ .card{
+    width: 220px;
+    height: 400px;
+    border:1px solid rgb(85, 14, 183);
+    background-color: rgb(255, 255, 255);
+    box-shadow:0 0 7px 4px rgb(151, 150, 144);
+    border-radius: 15px;
+    margin-top: 20px;
+}
+.image{
+    border-radius:  13px 13px 0 0;
+    height: 160px;
+    width: 220px;
+}
+.price{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(74, 93, 41);
+    padding-left: 57px;
+}
+.card h4{
+    padding-left: 70px;
+    color: rgb(230, 169, 13);
+    padding-top: 5px;
+}
+footer{
+    background-color: #ffffff;
+    text-align: center;
+}
+.card button{
+    background-color: #cece26;
+    height: 40px;
+    width: 130px;
+    font-size: 16px;
+    border-radius: 20px;
+    border: 1px solid rgb(79, 37, 51);
+}
+.card button:hover{
+    background-color: rgb(205, 189, 217);
+}
+.card p{
+    text-align: center;
+    padding-left: 20px;
+    padding-top: 12px;
+    padding-right: 20px;
+    font-size: 15px;
+    color: #264412;
+}
+.card h2{
+    text-align: center;
+    color: rgb(68, 52, 46);
+    font-size: 20px;
+    font-style:italic;
+    padding-top: 3px;
+}
