--- a/CSS/index.css
+++ b/CSS/index.css
@@ -495,7 +495,7 @@ nav {
     width: 90%;
     font-size: 17px;
     padding: 100px 15%;
-    background-color: #38363f;
+    background-color: rgb(240, 247, 244);
     color: #e7f1ef;
     display: flex;
  }
@@ -504,7 +504,7 @@ nav {
     justify-content: space-around;
  }
  .second{
-   flex-grow:.4;
+   flex-grow:.7;
  }
  .footer div h3{
     font-weight: 300;
@@ -513,12 +513,15 @@ nav {
     letter-spacing: 1px;
  }
  .footer h3{
-    color: rgb(255, 146, 67);
+    color: rgb(252, 105, 0);
+ }
+ .footer h3:hover{
+    border-bottom: .5px solid rgb(199, 11, 11);
  }
   .first a{
     display: block;
     text-decoration: none;
-    color: antiquewhite;
+    color: rgb(135, 89, 29);
     margin-bottom: 10px;
     font-size: 19px;
  }
@@ -530,7 +533,7 @@ nav {
     margin-top: 20px;
     margin-bottom: 40px;
     outline: none;
-    border: none;
+    border: 1px solid rgb(236, 188, 67);
  }
  form button{
     background-color: #428579;
@@ -556,7 +559,7 @@ nav {
     cursor: pointer;
  }
  .icon img:hover:hover{
-    box-shadow:0 0 7px 4px rgb(167, 24, 160);
+    box-shadow:0 0 7px 4px rgb(181, 131, 178);
  }
  /*cards*/
  .card-container{
