footer background color changed

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -495,8 +495,8 @@ nav {
     width: 90%;
     font-size: 17px;
     padding: 100px 15%;
-    background-color: rgb(240, 247, 244);
-    color: #e7f1ef;
+    background-color: rgb(201, 223, 213);
+    color: #30665b;
     display: flex;
  }
  .footer div{
