--- a/CSS/index.css
+++ b/CSS/index.css
@@ -571,12 +571,15 @@ nav {
 }
  .card{
     width: 220px;
+    box-shadow:0 0 10px 2px rgb(126, 151, 148);
     height: 400px;
     border:1px solid rgb(85, 14, 183);
     background-color: rgb(255, 255, 255);
-    box-shadow:0 0 7px 4px rgb(151, 150, 144);
     border-radius: 15px;
     margin-top: 20px;
+}
+.card:hover{
+    box-shadow:0 0 10px 2px rgb(45, 86, 82);
 }
 .image{
     border-radius:  13px 13px 0 0;
@@ -598,20 +601,21 @@ footer{
     text-align: center;
 }
 .card button{
-    text-decoration: none;
-    background-color: #cece26;
+    background-color: rgb(223, 212, 232);
     height: 40px;
     width: 130px;
     font-size: 16px;
     border-radius: 20px;
     border: 1px solid rgb(79, 37, 51);
 }
+
 .card-button a{
     text-decoration: none;
 }
 .card button:hover{
-    background-color: rgb(205, 189, 217);
+    background-color: #81d0b0;
 }
+    
 .card p{
     text-align: center;
     padding-left: 20px;
