--- a/CSS/camera.css
+++ b/CSS/camera.css
@@ -165,6 +165,11 @@ h3 {
     margin: 0 0 20px;
 }
 
+h2{
+    text-align: center;
+    text-decoration: underline;
+}
+
 .price {
     margin-left: 15px;
     font-size: 20px;
@@ -172,7 +177,7 @@ h3 {
 
 .c1-img {
     margin-bottom: 5px;
-    height: 180px;
+    height: 215px;
     width: 350px;
     border-radius: 10px 10px 0 0;
 }
@@ -186,7 +191,7 @@ h3 {
 
 .c3-img {
     margin-bottom: 5px;
-    height: 220px;
+    height: 215px;
     width: 350px;
     border-radius: 10px 10px 0 0;
 }
