--- a/CSS/television.css
+++ b/CSS/television.css
@@ -1,4 +1,55 @@
 * {
     margin: 0;
     padding: 0;
+    position: relative;
+}
+ul {
+    list-style: none;}
+a {
+    text-decoration: none;}
+.main {
+    width: 100%;
+    height: 90vh;
+    background-color: rgb(96, 195, 168);
+    position: relative;
+    background-image: url(../Images/online.png);
+    background-repeat: no-repeat;
+    background-size: 1000px;
+    background-position: right bottom;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
+    position: fixed;
+    top: 0;
+    background-color: rgb(240, 247, 244);
+    left: 0;
+    width: 100%;
+    height: 50px;
+    box-sizing: border-box;
+    padding: 10px 50px;
+    box-shadow: 2px 2px 10px rgba(4, 95, 95, 0.897);
+    z-index: 1;}
+.menu {
+    display: flex;}
+.menu li a {
+    padding: 10px 15px;
+    font-size: 17px;
+    color: rgb(184, 137, 17);}
+.logo {
+    font-size: 25px;
+    font-weight: bold;
+    color: indigo;
+    margin-left: 20px;
+    font-style: italic;}
+.menu li a:hover {
+    background-color: #def0ed;
+    font-weight: 700;
+    border-radius: 10px;
+    border: solid 1px rgb(211, 224, 65);
+    transition: all ease 0.4s;
 }
