--- a/CSS/television.css
+++ b/CSS/television.css
@@ -3,18 +3,16 @@
     padding: 0;
     position: relative;
 }
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 ul {
     list-style: none;}
 a {
     text-decoration: none;}
 .main {
-    width: 100%;
-    height: 90vh;
-    background-color: rgb(96, 195, 168);
-    position: relative;
-    background-repeat: no-repeat;
-    background-size: 1000px;
-    background-position: right bottom;
+    height: 60px;
+    background-color: rgb(243, 243, 243);
 }
 nav {
     display: flex;
@@ -97,4 +95,47 @@ nav {
 .dropdown {
     position: relative;
     display: inline-block;
+}
+.card{
+    margin:50px 30px 30px 60px;
+    height: 600px;
+    width: 380px;
+    background-color: aliceblue;
+    border-radius: 10px;
+    box-shadow: 1px 1px 20px 2px grey;
+    display: inline-block;
+}
+.tv-price{
+    margin-left: 15px;
+    font-size: 20px;
+}
+.tv-img{
+    padding: 10px;
+    height: 180px;
+    width: 330px;
+    border-radius: 10px 10px 0 0;
+    margin-left: 15px;
+    margin-right: auto;
+}
+.tv-name{
+    padding: 10px;
+    text-align: justify;
+    font-size: 17px;
+}
+.desc{
+   padding: 10px;
+}
+.d-head{
+    color: rgba(57, 55, 55, 0.63);
+}
+.highlight{
+    padding: 10px;
+}
+.btn{
+    background-color: black; 
+    color: white; 
+    border-radius: 20px; 
+    border: none;
+    padding: 10px; 
+    margin-left: 140px;
 }
