--- a/CSS/television.css
+++ b/CSS/television.css
@@ -139,3 +139,8 @@ nav {
     padding: 10px; 
     margin-left: 140px;
 }
+.category-heading{
+    padding: 10px;
+    background-color: rgb(103, 172, 160);
+    text-align: center;
+}
