--- a/CSS/television.css
+++ b/CSS/television.css
@@ -182,7 +182,7 @@ nav {
 }
 .footer{
     margin-top: 150px;
-    width: 90%;
+    width: auto;
     font-size: 17px;
     padding: 100px 15%;
     background-color: rgb(201, 223, 213);
