--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,3 +1,9 @@
+body{
+    width: auto;
+    height: auto;
+    box-sizing: content-box;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,13 +14,13 @@ ul {
 a {
     text-decoration: none;}
 .main {
-    width: 100%;
+    width:auto;
     height: 90vh;
     background-color: rgb(96, 195, 168);
     position: relative;
     background-image: url(../Images/online.png);
     background-repeat: no-repeat;
-    background-size: 1000px;
+    background-size: 1100px;
     background-position: right bottom;
 }
 nav {
@@ -113,7 +119,7 @@ nav {
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 20px;
-    width: 100%;
+    width: auto;
     background-color: rgb(243, 243, 243);
     padding-bottom: 50px;
 }
@@ -233,7 +239,7 @@ nav {
 }
 
 /* Small Devices */
-@media (max-width: 575.98px) {
+@media (max-width: 600px) {
     nav {
         flex-direction: column;
         height: auto;
@@ -331,7 +337,7 @@ nav {
     }
 }
 /* Medium Devices */
-@media (max-width: 767.98px) {
+@media screen and (min-width: 601px) and (max-width: 900px) {
     nav {
         flex-direction: row;
         height: auto;
@@ -409,7 +415,7 @@ nav {
 }
 
 /* Large Devices (Desktops, greater than 992px) */
-@media (min-width: 992px) {
+@media (min-width: 700px) {
     .ideal {
         width: 650px;
         top: 33%;
@@ -492,7 +498,7 @@ nav {
 /*Footer Section*/
  .footer{
     margin-top: 150px;
-    width: 90%;
+    width: auto;
     font-size: 17px;
     padding: 100px 15%;
     background-color: rgb(201, 223, 213);
@@ -608,7 +614,6 @@ footer{
     border-radius: 20px;
     border: 1px solid rgb(79, 37, 51);
 }
-
 .card-button a{
     text-decoration: none;
 }
