--- a/CSS/earphone.css
+++ b/CSS/earphone.css
@@ -62,6 +62,23 @@ nav {
     margin-left: 20px;
     font-style: italic;
 }
+.downlaod {
+    width: 200px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(216, 94, 94);
+    color: beige;
+    border-radius: 6px;
+    font-size: 25px;
+    border: none;
+    border: solid 2px goldenrod;
+}
+.downlaod:hover {
+    background-color: rgb(88, 104, 110);
+    transition: all ease 0.4s;
+}
 
 .menu li a:hover {
     background-color: #55d0bf;
