--- a/CSS/index.css
+++ b/CSS/index.css
@@ -509,8 +509,12 @@ nav {
     text-align: center;
     justify-content: space-around;
  }
+ .first{
+    padding-left: 40px;
+ }
  .second{
    flex-grow:.9;
+   padding-left: 70px;
  }
  .footer div h3{
     font-weight: 300;
