--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -10,12 +10,7 @@ a {
 .main {
     width: 100%;
     height: 90vh;
-    background-color: rgb(96, 195, 168);
     position: relative;
-    background-image: url(../Images/online.png);
-    background-repeat: no-repeat;
-    background-size: 1000px;
-    background-position: right bottom;
 }
 nav {
     display: flex;
@@ -490,6 +485,7 @@ nav {
 }
 */
 /*Footer Section*/
+
  .footer{
     margin-top: 150px;
     width: 90%;
@@ -504,7 +500,9 @@ nav {
     justify-content: space-around;
  }
  .second{
-   flex-grow:.7;
+   flex-grow:.7; background-repeat: no-repeat;
+   background-size: 1000px;
+   background-position: right bottom;
  }
  .footer div h3{
     font-weight: 300;
@@ -630,4 +628,74 @@ footer{
     font-size: 20px;
     font-style:italic;
     padding-top: 3px;
+}
+
+
+.cart{
+    margin:150px 30px 30px 60px;
+    height: 580px;
+    width: 350px;
+    background-color: aliceblue;
+    border-radius: 10px;
+    box-shadow: 1px 1px 20px 2px grey;
+    display: inline-block;
+}
+.price{
+    margin-left: 15px;
+    font-size: 20px;
+}
+
+.m-img{
+    margin-bottom: 5px;
+    height: 180px;
+    width: 350px;
+    border-radius: 10px 10px 0 0;
+}
+.m-name{
+    margin-left: 15px;
+    font-size: 17px;
+}
+.disc{
+    margin-top: 0;
+    margin-left: 15px;
+}
+
+.d-head{
+    color: rgba(57, 55, 55, 0.63);
+}
+.highlight{
+    margin-top: 8px;
+    margin-left: 20px;
+}
+
+.btn{
+    background-color: black; 
+    color: white; 
+    border-radius: 20px; 
+    border: none;
+    padding: 10px; 
+    margin-left: 140px;
+}
+  
+.categories{
+    text-align: center;
+    padding: 20px 0 0 0;
+    width: 100%;
+    height:40px;
+    margin: 50px 0 0 0;
+    font-size: 20px;
+    color: black;
+    position: sticky;
+    top: 40px;
+    background-color: rgb(96, 195, 168);
+}
+
+.catergories-s{
+    padding: 20px 0 0 0;
+    margin-top: 100px;
+    text-align: center;
+    background-color:rgb(96, 195, 168); 
+    position: sticky;
+    top: 40px;
+    
 }
