--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -630,3 +630,17 @@ footer{
     padding-top: 3px;
 }
 
+
+
+.categories{
+    text-align: center;
+    padding: 20px 0 0 0;
+    width: 100%;
+    height:40px;
+    margin: 50px 0 0 0;
+    font-size: 20px;
+    color: black;
+    position: sticky;
+    top: 40px;
+    background-color: #c2e1db;
+}
