--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -13,6 +13,7 @@ a {
     position: relative;
 }
 nav {
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -28,7 +29,8 @@ nav {
     box-sizing: border-box;
     padding: 10px 50px;
     box-shadow: 2px 2px 10px rgba(4, 95, 95, 0.897);
-    z-index: 1;}
+    z-index: 3;
+}
 .menu {
     display: flex;}
 .menu li a {
@@ -632,15 +634,75 @@ footer{
 
 
 
+.cart{
+    margin:100px 30px 30px 60px;
+    height: 580px;
+    width: 350px;
+    background-color: aliceblue;
+    border-radius: 10px;
+    box-shadow: 1px 1px 20px 2px grey;
+    display: inline-block;
+}
+.m-price{
+    margin-left: 15px;
+    font-size: 20px;
+}
+
+.m-img{
+    margin-bottom: 5px;
+    height: 180px;
+    width: 350px;
+    border-radius: 10px 10px 0 0;
+}
+.m-name{
+    margin-left: 15px;
+    font-size: 17px;
+}
+.disc{
+    margin-top: 0;
+    margin-left: 15px;
+}
+
+.d-head{
+    color: rgba(57, 55, 55, 0.63);
+}
+.highlight{
+    margin-top: 8px;
+    margin-left: 20px;
+}
+
+.btn{
+    background-color: black; 
+    color: white; 
+    border-radius: 20px; 
+    border: none;
+    padding: 10px; 
+    margin-left: 140px;
+}
+  
 .categories{
+    z-index: 2;
     text-align: center;
     padding: 20px 0 0 0;
     width: 100%;
     height:40px;
-    margin: 50px 0 0 0;
     font-size: 20px;
     color: black;
     position: sticky;
     top: 40px;
     background-color: #c2e1db;
 }
+
+.catergories-s{
+    z-index: 2;
+    padding: 20px 0 0 0;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    position: sticky;
+    top: 40px;
+    background-color:#c2e1db;
+    
+}
+
+
