brand icons added

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,6 @@
 body{
     width: auto;
-    background-color:#f1fafb;
+    background-color:#e9f4f5;
     height: auto;
 }
 
@@ -674,4 +674,32 @@ footer{
 }
 .about-container h2{
     color: gold;
+}
+.brand{
+    padding: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+.brand h2{
+    color: #3a766b;
+    font-family: "Handlee", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+.brand-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 10px
+}
+.brand-container img{
+    height: 70px;
+    width: 70px;
+}
+.brand-container button{
+    height: 130px;
+    background-color:rgb(206, 204, 208);
+    width: 180px;
+    border: 1px solid goldenrod;
+    border-radius: 40px;
 }
