--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -8,7 +8,7 @@ ul {
 a {
     text-decoration: none;}
 .main {
-    width: 100%;
+    width: auto;
     height: 90vh;
     position: relative;
 }
@@ -490,7 +490,7 @@ nav {
 
  .footer{
     margin-top: 150px;
-    width: 90%;
+    width: auto;
     font-size: 17px;
     padding: 100px 15%;
     background-color: rgb(201, 223, 213);
