--- a/CSS/television.css
+++ b/CSS/television.css
@@ -220,6 +220,7 @@ nav {
     color: black;
     padding: 20px 0;
     text-align: center;
+    margin-top: -10px;
 }
 .intro {
     padding: 40px 20px;
