added flexbox properties

--- a/CSS/television.css
+++ b/CSS/television.css
@@ -247,3 +247,9 @@ nav {
 .buy-btn:hover {
     background-color: #e04e2e;
 }
+.container-card{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
