matched category heading color with other pages

--- a/CSS/television.css
+++ b/CSS/television.css
@@ -140,7 +140,7 @@ nav {
 }
 .category-heading{
     padding: 10px;
-    background-color: rgb(103, 172, 160);
+    background-color: #c2e1db;
     text-align: center;
 }
 .footer{
