nav bar added into large rresponsive

--- a/CSS/camera.css
+++ b/CSS/camera.css
@@ -3027,4 +3027,87 @@ form button:hover {
             box-shadow: 2px 2px 10px rgba(4, 95, 95, 0.897);
             z-index: 1;
         }
+                .menu {
+                    display: flex;
+                }
+        
+                .menu li a {
+                    padding: 10px 15px;
+                    color: rgb(184, 137, 17);
+                    font-size: 17px;
+                }
+        
+                .logo:hover {
+                    background-color: rgb(213, 235, 227);
+                    transition: all ease 0.7s;
+                }
+        
+                .logo {
+                    font-size: 25px;
+                    font-weight: bold;
+                    color: indigo;
+                    margin-left: 20px;
+                    font-style: italic;
+                }
+        
+                .menu li a:hover {
+                    background-color: #55d0bf;
+                    font-weight: 700;
+                    border-radius: 10px;
+                    border: solid 1px rgb(191, 202, 76);
+                    transition: all ease 0.4s;
+                }
+        
+                .dropdown-checkbox {
+                    display: none;
+        
+                }
+        
+                .dropbtn {
+                    padding: 10px 15px;
+                    color: rgb(184, 137, 17);
+                    font-size: 17px;
+                    cursor: pointer;
+                    border-radius: 8px;
+                }
+        
+                .dropdown-content {
+                    display: none;
+                    position: fixed;
+                    background-color: #cceae5;
+                    box-shadow: 0px 8px 16px 3px rgba(74, 79, 79, 0.916);
+                    z-index: 1;
+                    border-radius: 10px;
+                    width: 220px;
+                }
+        
+                .dropdown-checkbox:checked+.dropbtn .arrow {
+                    transform: rotate(180deg);
+                }
+        
+                .dropdown-content a {
+                    color: rgb(0, 0, 0);
+                    padding: 10px 15px;
+                    display: list-item;
+                    border-radius: 5px;
+                }
+        
+                .dropdown-content a:hover {
+                    background-color: #51bc9c;
+                }
+        
+                .dropdown-checkbox:checked~.dropdown-content {
+                    display: block;
+                }
+        
+                .dropdown {
+                    position: relative;
+                    display: inline-block;
+                }
+        
+                .arrow {
+                    margin-left: 2px;
+                    display: inline-block;
+                    transition: transform 0.3s
+                }
 }
